2025-03-27  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4: Sea Shanty';git push
	git tag -a 5.3.3 -m 'all: qnt ngt zro NaN; ncks: --fpe, ngl rsn chk map, s1d frc_column frc_landunit attribute fix; ncremap: fix prs->hyb w/fat tpl; ncrename: WARN crd/dmn netCDF4';git push --tags

	* Add stubs for ncks --lst_hrz, nco_xtr_hrz_lst() customized for ncap2 splitter

2025-03-21  Charlie Zender  <zender@uci.edu>

	* Simplify Perlmutter build to be nearly identical to Chrysalis, Andes

	* Document --fpe, add to man and usage pages

	* NCO 5.3.3-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.3-alpha03: Equalizer';git push
	git tag -a 5.3.3-alpha03 -m 'all: perlmutter bld; ncks: ngl rsn chk map, s1d frc_column frc_landunit attribute fix';git push --tags

2025-03-19  Charlie Zender  <zender@uci.edu>

	* Fix Perlmutter environment to avoid /usr/bin/install and use Conda coreutils install to install in ${DATA}/[bin,lib]

2025-02-27  Charlie Zender  <zender@uci.edu>

	* Tidy nco_ply_lst.c

2025-02-21  Charlie Zender  <zender@uci.edu>

	* nco_s1d.c: Move location where frc_column, frc_landunit attributes written

	* nco_map.c: Add min/max angular resolution to --chk_map

2025-02-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.3-alpha02: Toyota Matrix';git push
	git tag -a 5.3.3-alpha02 -m 'all: qnt ngt zro NaN; ncks: --fpe; ncremap: fix prs->hyb w/fat tpl';git push --tags

	* Migrate to netcdf-c 4.10.0-development

	* nco_rgr.c: Fix write of PS to output from fat templates when input is pure-pressure output is hybrid

2025-02-15  Charlie Zender  <zender@uci.edu>

	* Verify --fpe test passes when using either internal NCO or patched libnetcdf.a quantize algorithms

	* Distinguish val_flt and val_dbl de-reference where appropriate (except DigitRound and Granular BitRound, for now)
