@@ -2,7 +2,10 @@
 
 	* NCO 5.3.4 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.4: Sea Shanty';git push
-	git tag -a 5.3.3 -m 'all: qnt ngt zro NaN; ncks: --fpe, ngl rsn chk map, s1d frc_column frc_landunit attribute fix; ncremap: fix prs->hyb w/fat tpl; ncrename: WARN crd/dmn netCDF4';git push --tags
+	git tag -a 5.3.3 -m 'all: qnt ngt zro NaN; ncks: --fpe, ngl rsn
+	chk map, s1d frc_column frc_landunit attribute fix; ncclimo: rgn_stt uses --lst_hrz; ncremap: fix prs->hyb w/fat tpl; ncrename: WARN crd/dmn netCDF4';git push --tags
+
+	* ncks --lst_hrz seems to work in ncclimo
 
 	* Add stubs for ncks --lst_hrz, nco_xtr_hrz_lst() customized for ncap2 splitter
 
